# pratical-mlops

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: makefile.yml
tests/: test.py
