[tool.poetry]
name = "practical-mlops"
version = "0.1.0"
description = "Pratical MLOps"
authors = ["AC <ac@marketmining.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.6.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
